WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310610
[JSC] Handle `Error.isError` in DFG/FTL with `IsCellWithType` node
https://bugs.webkit.org/show_bug.cgi?id=310610
Summary
[JSC] Handle `Error.isError` in DFG/FTL with `IsCellWithType` node
Sosuke Suzuki
Reported
2026-03-24 00:09:41 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-24 00:10:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61227
EWS
Comment 2
2026-03-24 20:20:38 PDT
Committed
309887@main
(6c34b6a708cd): <
https://commits.webkit.org/309887@main
> Reviewed commits have been landed. Closing PR #61227 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-24 20:21:14 PDT
<
rdar://problem/173290753
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug